fix: enhance layout structure with site wrapper and spacing adjustments

--- a/assets/styles/templates/_main.scss
+++ b/assets/styles/templates/_main.scss
@@ -1,5 +1,18 @@
 @use "sass:color";
 
+.site-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  main {
+    flex: 1 0 auto;
+  }
+  .footer {
+    flex-shrink: 0;
+  }
+}
+
 // banner
 .banner {
   background-repeat: no-repeat;
